# real_time_chat_api

./: README.md  app.py  pyproject.toml
templates/: index.html
